
1.3.1.1:
  - Set dependencies

1.4.0:
  - Add update workflow

2.0.0:
  - Support propagate resource deletion policy.
  - Update Kubernetes Python Client to version 4.0.0
  - Add RBAC node type.
  - Support checking statuses for Kubernetes resources.

2.0.0.1:
  - Fix Conditional service check

2.1.0:
  - Add support for creating resources on Kubernetes using service account token

2.2.0:
  - Adding an "update_resource_definition" workflow.

2.2.1:
  - Use patch_ methods for update instead of replace_ in the mappings module.

2.2.2:
  - Improve Pod state verification.

2.3.0:
  - Add Node type.
  - Add use_external_resource property. Performs read operations on create and delete instead of performing create and delete.

2.4.0:
  - Support `---` separator in resource file `cloudify.kubernetes.resources.MultipleFileDefinedResources`.
  - Bump client library to `kubernetes==9.0.0`

2.4.1:
  - Fix bug in `---` separator.

2.5.0:
  - Add support "resumable" actions.

2.6.0:
  - Bump client library to `kubernetes==10.0.1`
  - Update node mappings for 16.1 deprecation notices: https://kubernetes.io/blog/2019/07/18/api-deprecations-in-1-16/.
  - Fix bug that prevented using multiple resource configurations in a single file.
  - Add poststart operation mapped to read resource.

2.6.1:
  - Fix bug in status check for persistent volume.

2.6.2:
  - Add namespace type.

2.6.3:
  - Fix bug in Custom Resource Delete when use_external_resource is true.

2.6.4:
  - Handle empty file resource.

2.6.5:
  - Fix issue with `GCPServiceAccountAuthentication`.

2.7.0:
  - added client_config property to all resources

2.7.1:
  - added cloudify.kubernetes.resources.ResourceWithValidateStatus to handle all the resources that
  didnt derived from ResourceBase type.

2.7.2:
  - Support Python 3

2.8.0:
  - Remove trailing slash in URL.
  - Support modifying a resource type and number during update workflow.

2.8.1:
  - Update wagon builder to py2py3 wagon.