@@ -5,5 +5,9 @@ mock>=1.0
 nose-testconfig>=0.9
 nose>=1.3
 nose-cov>=1.3
-pytest
+pytest==4.6.3
 git+https://github.com/cloudify-cosmo/cloudify-common@master#egg=cloudify-common[dispatcher]==master
+
+# For integration tests
+git+https://github.com/cloudify-cosmo/cloudify-cli@master#egg=cloudify-cli==master
+pyyaml==3.12
